tests/paczka2/big_fuzzy/83224089.err
Error in line 3: WlZxdWao2 A744 48,38
Error in line 9: 0CyFgBXx A954 4,7
Error in line 17: 0CyFgBXx A204 42,5
Error in line 19: 0CyFgBXx A500 97,8
Error in line 24: 0CyFgBXx A744 -2,3
Error in line 16: WlZxdWao2 A744 84,8
Error in line 29: igaM0ghrmU A500 5,2
Error in line 37: igaM0ghrmU A954 97,4
Error in line 26: A954 A954 28,8
Error in line 53: igaM0ghrmU A204 72,1
Error in line 56: 2iiX A954 65,4
Error in line 48: WlZxdWao2 A204 140,1
Error in line 63: 2iiX A204 -1,9
Error in line 41: A954 A500 62,2
Error in line 59: 2iiX A204 5,2
Error in line 70: wo3aBauy A744 10,6
Error in line 75: 2iiX A744 -2,2
Error in line 83: igaM0ghrmU A204 95,3
Error in line 87: WlZxdWao2 A204 93,6
Error in line 88: WlZxdWao2 A500 51,5
Error in line 105: wo3aBauy A954 43,4
Error in line 109: 2iiX A954 91,9
Error in line 110: 2iiX A500 67,3
Error in line 120: WlZxdWao2 A744 74,9
Error in line 119: igaM0ghrmU A500 144,6
Error in line 126: A954 A500 29,7
Error in line 125: BLa4ApQQy A204 69,2
Error in line 128: 0CyFgBXx A954 53,4
Error in line 121: 2iiX A744 94,4
Error in line 146: BLa4ApQQy A204 37,4
Error in line 150: BLa4ApQQy A500 2,1
Error in line 142: A954 A744 36,9
Error in line 157: wo3aBauy A204 -2,5
Error in line 144: WlZxdWao2 A204 55,8
Error in line 155: 0CyFgBXx A204 69,8
Error in line 168: 0CyFgBXx A500 0,3
Error in line 178: wo3aBauy A744 -1,8
Error in line 175: 0CyFgBXx A500 80,3
Error in line 184: igaM0ghrmU A954 95,5
Error in line 189: WlZxdWao2 A500 96,2
Error in line 171: wo3aBauy A744 11,7
Error in line 196: ?WlZxdWao(
Error in line 195: 2iiX A744 76,5
Error in line 199: 2iiX A954 85,3
Error in line 205: igaM0ghrmU A954 30,1
Error in line 204: A954 A500 91,4
Error in line 208: wo3aBauy A744 45,8
Error in line 218: 2iiX A500 79,14
Error in line 229: wo3aBauy A744 70,0
Error in line 234: WlZxdWao2 A500 31,0
Error in line 240: 0CyFgBXx A744 74,9
